--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ python-dotenv==0.19.0
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-auth-httplib2==0.1.0
-google-api-python-client==2.33.0 
+google-api-python-client==2.33.0
+Flask-Mail==0.9.1
