--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==3.0.2
+SQLAlchemy==1.4.41
 Flask-Login==0.5.0
 Werkzeug==2.0.1
 requests==2.26.0
