--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ google-auth-httplib2==0.1.0
 google-api-python-client==2.33.0
 Flask-Mail==0.9.1
 pyOpenSSL==23.2.0
+requests-oauthlib==1.3.1
+waitress==2.1.2
