--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,16 @@ services:
   - type: web
     name: flask-app
     env: python
-    buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: cd /opt/render/project/src && gunicorn app:app --bind=0.0.0.0:$PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn wsgi:app
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.0
       - key: PRODUCTION
         value: true
-      - key: PYTHON_VERSION
-        value: 3.9.18
       - key: PORT
         value: 10000
       - key: PYTHONPATH
         value: /opt/render/project/src
+      - key: WEB_CONCURRENCY
+        value: 4
