--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-Flask==2.2.0
-Flask-SQLAlchemy==3.0.2
-SQLAlchemy==1.4.41
-Flask-Login==0.6.2
-Werkzeug==2.2.0
-requests==2.26.0
-python-dotenv==0.19.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-auth-httplib2==0.1.0
-google-api-python-client==2.33.0
-Flask-Mail==0.9.1
-pyOpenSSL==23.2.0
-requests-oauthlib==1.3.1
-waitress==2.1.2
-gunicorn==20.1.0
+flask
+flask-sqlalchemy
+flask-login
+werkzeug
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+python-dotenv
+requests
+flask-mail
+gunicorn
+waitress
+requests_oauthlib
